# modernfastapi

./: README.md
first-api/: pyproject.toml
first-api/first_api/: main.py  settings_template.json
first-api/first_api/api/: weather_api.py
first-api/first_api/local_data/: free_weather_api_openapi.json  free_weather_api_response_example.json  geocoding_api_example.json  geocoding_api_openapi.json
first-api/first_api/local_data/fake_db/: fake_reports.py
first-api/first_api/models/: geolocation_model.py  location.py  report.py  validation_error.py  weather_model.py
first-api/first_api/models/deprecated/: geolocation_model.py  readme.md
first-api/first_api/services/: fake_crud.py  openweather_service.py
first-api/first_api/templates/home/: about.html  index.html
first-api/first_api/templates/shared/: layout.html
first-api/first_api/views/: home.py
